--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1> Olá, Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas natus ab fuga optio est odit tenetur, iusto amet quisquam quaerat consequuntur ad temporibus fugiat non provident, tempore inventore delectus corporis. better place</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas natus ab fuga optio est odit tenetur, iusto amet quisquam quaerat consequuntur ad temporibus fugiat non provident, tempore inventore delectus corporis.</p>
 </body>
 </html>
